Рефакторинг. Добавлен экран деталей сериала. Добавлено обновление списка фильмов/сериалов/людей. Добавлено кэширование изображений.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_inappwebview: ^6.0.0
   youtube_player_iframe: ^5.1.2
   provider: ^6.1.2
+  cached_network_image: ^3.4.0
   
 dev_dependencies:
   flutter_test:
