--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   youtube_player_iframe: ^5.1.2
   provider: ^6.1.2
   cached_network_image: ^3.4.0
+  flutter_rating_stars: ^1.1.0
   
 dev_dependencies:
   flutter_test:
