--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,15 @@ dependencies:
   json_annotation: ^4.9.0
   flutter_localizations:
     sdk: flutter
-  intl: ^0.18.1
+  intl: ^0.19.0
   webview_flutter: ^4.8.0
   flutter_inappwebview: ^6.0.0
   youtube_player_iframe: ^5.1.2
   provider: ^6.1.2
   cached_network_image: ^3.4.0
   flutter_rating_stars: ^1.1.0
+  flutter_spinner_item_selector: ^1.0.0
+  
   
 dev_dependencies:
   flutter_test:
