--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   cached_network_image: ^3.4.0
   flutter_rating_stars: ^1.1.0
   flutter_spinner_item_selector: ^1.0.0
+  flutter_holo_date_picker: ^2.0.0
+  flutter_form_builder: ^9.5.0
   
   
 dev_dependencies:
